Capitalization fixes "ultrapar" -> "Ultrapar"

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1782,9 +1782,9 @@ ERROR_PORT_UNAVAILABLE=Puerto no disponible. Por favor, seleccione otro puerto.
 #### ERROR_KEEP_ALIVE=LimeWire does not allow you to maintain this many connections, as it creates excess traffic that clogs the network.
 ERROR_KEEP_ALIVE=LimeWire no le permite mantener todas estas conexiones porque crean un tráfico excesivo que obstruye la red.
 #### ERROR_TOO_LOW_FOR_ULTRAPEER=Ultrapeers with leaf nodes need at least six connections.
-ERROR_TOO_LOW_FOR_ULTRAPEER=Los ultrapares con nodos hoja necesitan por lo menos seis conexiones.
+ERROR_TOO_LOW_FOR_ULTRAPEER=Los Ultrapares con nodos hoja necesitan por lo menos seis conexiones.
 #### ERROR_TOO_HIGH_FOR_LEAF=Leaves only need one connection, since they are connected to an Ultrapeer.
-ERROR_TOO_HIGH_FOR_LEAF=Las hojas sólo necesitan una conexión, ya que están conectadas a un ultrapar.
+ERROR_TOO_HIGH_FOR_LEAF=Las hojas sólo necesitan una conexión, ya que están conectadas a un Ultrapar.
 #### ERROR_PORT=Could not find a port to use for incoming connections.\nPlease specify a port from the configuration window.
 ERROR_PORT=No se pudo encontrar un puerto para uso de las conexiones entrantes.\nPor favor especifique un puerto desde la ventana de configuración.
 #### ERROR_INCOMING_CONNECTIONS=Could not listen to socket for incoming connections; aborting.
@@ -2073,11 +2073,11 @@ OPTIONS_SPEED_BOX_LABEL=Velocidad:
 # Key/Value pairs for disabling supernode support
 ################################################################################
 #### OPTIONS_DISABLE_SUPERNODE_MODE_TITLE=Ultrapeer Capabilities
-OPTIONS_DISABLE_SUPERNODE_MODE_TITLE=Capacidades del ultrapar
+OPTIONS_DISABLE_SUPERNODE_MODE_TITLE=Capacidades del Ultrapar
 #### OPTIONS_DISABLE_SUPERNODE_MODE_LABEL=If your computer has a fast internet connection, LimeWire may act as an "Ultrapeer" for slower users. You can disable this if needed.
-OPTIONS_DISABLE_SUPERNODE_MODE_LABEL=Si su computadora tiene una conexión rápida a internet, LimeWire puede funcionar como un "ultrapar" para usuarios con conexión más lenta. Si es necesario, puede desactivar esta función.
+OPTIONS_DISABLE_SUPERNODE_MODE_LABEL=Si su computadora tiene una conexión rápida a internet, LimeWire puede funcionar como un "Ultrapar" para usuarios con conexión más lenta. Si es necesario, puede desactivar esta función.
 #### OPTIONS_DISABLE_SUPERNODE_MODE_BOX_LABEL=Disable Ultrapeer Capabilities:
-OPTIONS_DISABLE_SUPERNODE_MODE_BOX_LABEL=Desactivar las capacidades de ultrapar:
+OPTIONS_DISABLE_SUPERNODE_MODE_BOX_LABEL=Desactivar las capacidades de Ultrapar:
 
 ################################################################################
 # Key/Value pairs for disabling OOB support
@@ -3017,7 +3017,7 @@ QRP_LEAF=Hoja
 #### STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_TITLE=Sent
 STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_TITLE=Enviado
 #### STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
-STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_LABEL=Todas las consultas dirigidas a otros ultrapares para el último salto, mediante tablas de direccionamiento de consultas.
+STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_LABEL=Todas las consultas dirigidas a otros Ultrapares para el último salto, mediante tablas de direccionamiento de consultas.
 #### STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT=Sent
 STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT=Enviado
 #### STATS_QRP_ULTRAPEER_ROUTED_QUERIES_DROP=Not Sent
@@ -3301,7 +3301,7 @@ STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Kilobytes de mecanismos de e
 #### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Sent
 STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Enviado
 #### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=Todas las consultas dirigidas a otros ultrapares durante el último salto, mediante las tablas de direccionamiento de consultas.
+STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=Todas las consultas dirigidas a otros Ultrapares durante el último salto, mediante las tablas de direccionamiento de consultas.
 #### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Not Sent
 STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=No enviado
 #### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
@@ -3329,7 +3329,7 @@ STATS_HANDSHAKING_LEAF_LABEL=Estadísticas de sincronización como hoja.
 #### STATS_HANDSHAKING_ULTRAPEER_TITLE=Ultrapeer
 STATS_HANDSHAKING_ULTRAPEER_TITLE=Ultrapar
 #### STATS_HANDSHAKING_ULTRAPEER_LABEL=Statistics for handshaking as an ultrapeer.
-STATS_HANDSHAKING_ULTRAPEER_LABEL=Estadísticas de sincronización como ultrapar.
+STATS_HANDSHAKING_ULTRAPEER_LABEL=Estadísticas de sincronización como Ultrapar.
 #### STATS_HANDSHAKING_OUTGOING_TITLE=Outgoing
 STATS_HANDSHAKING_OUTGOING_TITLE=Saliente
 #### STATS_HANDSHAKING_OUTGOING_LABEL=Statistics for outgoing Gnutella connection handshaking.
@@ -3950,7 +3950,7 @@ UP_INCOMING_ACCEPT_UP=Aceptación entrante (Ultrapar)
 #### UP_INCOMING_REJECT_NO_ROOM_LEAF=In Rej. (All Slots Taken)
 UP_INCOMING_REJECT_NO_ROOM_LEAF=Rechazo entrante (Todas las ranuras tomadas)
 #### UP_INCOMING_REJECT_NO_ROOM_UP=In Rej. (Network Needs Ultrapeer)
-UP_INCOMING_REJECT_NO_ROOM_UP=Rechazo entrante (La red necesita ultrapares)
+UP_INCOMING_REJECT_NO_ROOM_UP=Rechazo entrante (La red necesita Ultrapares)
 #### OUTGOING_BAD_CONNECT=Bad Connect
 OUTGOING_BAD_CONNECT=Mala conexión
 #### OUTGOING_SERVER_REJECT=Server Reject
@@ -3982,7 +3982,7 @@ OUTGOING_LIMEWIRE_ULTRAPEER_REJECT=Ultrapares de LimeWire
 #### OUTGOING_LIMEWIRE_LEAF_REJECT=LimeWire Leaves
 OUTGOING_LIMEWIRE_LEAF_REJECT=Hojas de LimeWire
 #### OUTGOING_OTHER_ULTRAPEER_REJECT=Other Ultrapeers
-OUTGOING_OTHER_ULTRAPEER_REJECT=Otros ultrapares
+OUTGOING_OTHER_ULTRAPEER_REJECT=Otros Ultrapares
 #### OUTGOING_OTHER_LEAF_REJECT=Other Leaves
 OUTGOING_OTHER_LEAF_REJECT=Otras hojas
 
