--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -609,7 +609,7 @@ SEARCH_PUBLIC_BLOCK_STRING=Bannir l'hôte
 #### SEARCH_RESULT_TABLE_LABEL=Results
 SEARCH_RESULT_TABLE_LABEL=Résultats
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
-#? SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=
+SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Chercher davantage
 #### SEARCH_SEARCHING_LABEL=Searching...
 SEARCH_SEARCHING_LABEL=Recherche en cours...
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
@@ -690,14 +690,14 @@ MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copie les liens Magnet des fichiers sélectionné
 ################################################################################
 # {0} the space separated list of keywords
 #### SEARCH_FOR_KEYWORDS_ACTION_NAME=Search for Keywords: {0}
-#? SEARCH_FOR_KEYWORDS_ACTION_NAME=
+SEARCH_FOR_KEYWORDS_ACTION_NAME=Recherche des mots-clé: {0}
 # {0} the already translated mediatype
 #### SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
-#? SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=
+SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Recherche les nouveautés de: {0}
 # {0} the type of the search, e.g. Title, Album, Genre
 # {1} the keywords fo the search, e.g. name of the album
 #### SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
-#? SEARCH_XML_FIELD_ACTION_NAME=
+SEARCH_XML_FIELD_ACTION_NAME=Recherche par {0}: {1}
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -1223,7 +1223,7 @@ LIBRARY_TABLE_LICENSE=Licence
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=Transférés
 #### LIBRARY_TABLE_SEARCH_POPUP_MENU=Search
-#? LIBRARY_TABLE_SEARCH_POPUP_MENU=
+LIBRARY_TABLE_SEARCH_POPUP_MENU=Chercher
 #### LIBRARY_TABLE_ADVANCED_POPUP_MENU=Advanced
 LIBRARY_TABLE_ADVANCED_POPUP_MENU=Options avancées
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
@@ -1422,7 +1422,7 @@ META_SEARCH_STRING=Chaîne recherchée
 #### META_SEARCH_CANCEL_BUTTON_LABEL=Cancel
 META_SEARCH_CANCEL_BUTTON_LABEL=Annuler
 #### META_SEARCH_SEARCH_BUTTON_LABEL=Search
-META_SEARCH_SEARCH_BUTTON_LABEL=Rechercher
+META_SEARCH_SEARCH_BUTTON_LABEL=Chercher
 #ViewChooserDialog
 #### VIEW_CHOOSER_TITLE=Choose View
 VIEW_CHOOSER_TITLE=Choisir une vue
