--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -211,7 +211,7 @@ GETTING_STARTED_CONTENTS=Pour commencer à utiliser LimeWire, repérez le champ te
 ###################################################################
 #### GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
 GOING_PRO_TITLE=L'outil de partage de fichiers le plus avancé au monde\u00a0!
-#### GOING_PRO_DESCRIPTION=Better search results\nTurbo charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
+#### GOING_PRO_DESCRIPTION=Better search results\nTURBOCHARGED download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
 GOING_PRO_DESCRIPTION=De meilleurs résultats de recherche.\nDes téléchargements à la vitesse Turbo.\nDes connexions à davantage de sources.\nUn support technique personnalisé.\nSix mois de mises à jour gratuites.
 
 ###################################################################
@@ -751,19 +751,27 @@ SEARCH_FILTER_MEDIA=Média
 
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Aperçu
-#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
+#### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview Selected Downloads
 DOWNLOAD_LAUNCH_BUTTON_TIP=Lance un aperçu des téléchargements sélectionnés.
+#### DOWNLOAD_LAUNCH_BUTTON_COMPLETED_LABEL=Launch
+DOWNLOAD_LAUNCH_BUTTON_COMPLETED_LABEL=Lancer
+#### DOWNLOAD_LAUNCH_BUTTON_COMPLETED_TIP=Launch Selected Downloads
+DOWNLOAD_LAUNCH_BUTTON_COMPLETED_TIP=Lance les fichiers téléchargés sélectionnés.
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=Arrêter
 #### DOWNLOAD_KILL_BUTTON_TIP=Stop Selected Downloads
 DOWNLOAD_KILL_BUTTON_TIP=Arrête les téléchargements sélectionnés.
+#### DOWNLOAD_KILL_BUTTON_COMPLETED_LABEL=Clear
+DOWNLOAD_KILL_BUTTON_COMPLETED_LABEL=Purger
+#### DOWNLOAD_KILL_BUTTON_COMPLETED_TIP=Clear Selected Downloads
+DOWNLOAD_KILL_BUTTON_COMPLETED_TIP=Ôte de la liste les fichiers téléchargés sélectionnés.
 #### DOWNLOAD_RESUME_BUTTON_LABEL=Resume
 DOWNLOAD_RESUME_BUTTON_LABEL=Reprendre
-#### DOWNLOAD_RESUME_BUTTON_TIP=Try to Reattempt a Download
+#### DOWNLOAD_RESUME_BUTTON_TIP=Reattempt Selected Downloads
 DOWNLOAD_RESUME_BUTTON_TIP=Essayer à nouveau le téléchargement du fichier sélectionné.
 #### DOWNLOAD_SOURCES_BUTTON_LABEL=Find Sources
 DOWNLOAD_SOURCES_BUTTON_LABEL=Autres sources
-#### DOWNLOAD_SOURCES_BUTTON_TIP=Try to Find Sources for Failed Downloads
+#### DOWNLOAD_SOURCES_BUTTON_TIP=Try to Find Additional Sources for Downloads
 DOWNLOAD_SOURCES_BUTTON_TIP=Tente de trouver d'autres sources après un échec de téléchargement.
 #### DOWNLOAD_CLEAR_BUTTON_LABEL=Clear Inactive
 DOWNLOAD_CLEAR_BUTTON_LABEL=Effacer inactifs
@@ -771,7 +779,7 @@ DOWNLOAD_CLEAR_BUTTON_LABEL=Effacer inactifs
 DOWNLOAD_CLEAR_BUTTON_TIP=Ôte les téléchargements inactifs.
 #### DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
 DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
-#### DOWNLOAD_PAUSE_BUTTON_TIP=Pause the Selected Downloads
+#### DOWNLOAD_PAUSE_BUTTON_TIP=Pause Selected Downloads
 DOWNLOAD_PAUSE_BUTTON_TIP=Suspend provisoirement les téléchargements sélectionnés.
 
 #### LIBRARY_LAUNCH_BUTTON_LABEL=Launch
@@ -879,9 +887,9 @@ STATISTICS_CONNECTION_GOOD_TIP=Vous n'êtes pas pleinement connecté au réseau, ma
 STATISTICS_CONNECTION_EXCELLENT=excellente
 #### STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong.
 STATISTICS_CONNECTION_EXCELLENT_TIP=Votre connexion au réseau est excellente.
-#### STATISTICS_CONNECTION_TURBO_CHARGED=TurboCharged
+#### STATISTICS_CONNECTION_TURBO_CHARGED=TURBOCHARGED
 STATISTICS_CONNECTION_TURBO_CHARGED=turbo-chargée
-#### STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience TurboCharged connections all the time with LimeWire Pro.
+#### STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience TURBOCHARGED connections all the time with LimeWire PRO.
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=Vous pourriez bénéficier en permanence de connexions turbo-chargées avec LimeWire Pro.
 #### STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong.
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Votre connexion au réseau est optimale et extrèmement fiable pour toutes sortes de recherches.
@@ -1373,7 +1381,7 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=Utilise le dossier par défaut.
 ################################################################################
 #### PRO_TITLE=Upgrade to PRO
 PRO_TITLE=Mise à niveau vers la version PRO
-#### PRO_LABEL_THANKS=For TURBOcharged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
+#### PRO_LABEL_THANKS=For TURBOCHARGED downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
 PRO_LABEL_THANKS=Vous voulez mettre le TURBO pour vos chargements\u00a0? obtenez la version Limewire PRO. Nous pouvons vous garantir que vous adorerez les gains de performance de la version PRO. Merci pour votre aide à maintenir l'Internet ouvert en exécutant LimeWire.
 #### PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 PRO_LABEL_QUESTION=Migrer vers LimeWire PRO\u00a0?
@@ -1643,23 +1651,23 @@ SHUTDOWN_WAIT=Veuillez patienter durant l'arrêt de Limewire...
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
-#### SUPPORT_LIMEWIRE_01=For TURBO Charged searches get LimeWire Pro.
+#### SUPPORT_LIMEWIRE_01=For TURBOCHARGED searches get LimeWire PRO.
 SUPPORT_LIMEWIRE_01=Soutenez le développement futur de LimeWire.
 #### SUPPORT_LIMEWIRE_02=Click here to support LimeWire's development of open, peer-to-peer networks.
 SUPPORT_LIMEWIRE_02=Cliquez ici pour soutenir le développement par LimeWire des réseaux ouverts et pair-à-pair.
-#### SUPPORT_LIMEWIRE_03=Purchase LimeWire Pro to help us make downloads faster.
+#### SUPPORT_LIMEWIRE_03=Purchase LimeWire PRO to help us make downloads faster.
 SUPPORT_LIMEWIRE_03=Supportez la recherche et le développement de la plateforme LimeWire de réseaux ouverts.
-#### SUPPORT_LIMEWIRE_04=For TURBO Charged downloads get LimeWire Pro.
+#### SUPPORT_LIMEWIRE_04=For TURBOCHARGED downloads get LimeWire PRO.
 SUPPORT_LIMEWIRE_04=Devenez Partenaire de la recherche LimeWire.
 #### SUPPORT_LIMEWIRE_05=Support open networks.
 SUPPORT_LIMEWIRE_05=Supportez les réseaux ouverts.
 #### SUPPORT_LIMEWIRE_06=Click here to support open source and open protocols.
 SUPPORT_LIMEWIRE_06=Cliquez pour soutenir le développement libre et les protocoles ouverts.
-#### SUPPORT_LIMEWIRE_07=For TURBO Charged Performance get LimeWire Pro.
+#### SUPPORT_LIMEWIRE_07=For TURBOCHARGED Performance get LimeWire PRO.
 SUPPORT_LIMEWIRE_07=Cliquez pour aider LimeWire à bâtir l'architecture numérique.
-#### SUPPORT_LIMEWIRE_08=Keep the Internet open. Get Pro.
+#### SUPPORT_LIMEWIRE_08=Keep the Internet open.  Get LimeWire PRO.
 SUPPORT_LIMEWIRE_08=Contribuez aux logiciels ouverts de réseaux pair-à-pair.
-#### SUPPORT_LIMEWIRE_09=Developing LimeWire costs real money. Get Pro.
+#### SUPPORT_LIMEWIRE_09=Developing LimeWire costs real money.  Get PRO.
 SUPPORT_LIMEWIRE_09=Supportez une nouvelle communauté d'artistes indépendants.
 #### SUPPORT_LIMEWIRE_11=Help support sharing of independent media content.
 SUPPORT_LIMEWIRE_11=Encouragez le partage de contenus multimédias indépendants.
@@ -1724,7 +1732,7 @@ MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire ne peut pas utiliser le dossier spécifié
 MESSAGE_FILE_CORRUPT=LimeWire a détecté une corruption des données du fichier
 #### MESSAGE_CONTINUE_DOWNLOAD=Do you want to continue the download?
 MESSAGE_CONTINUE_DOWNLOAD=Voulez-vous poursuivre le téléchargement\u00a0?
-#### MESSAGE_LANG_CHANGE=Please note that you must restart limewire for the language to change. Also, make sure that you have the required fonts for the selected language.
+#### MESSAGE_LANG_CHANGE=Please note that you must restart LimeWire for the language to change.  Also, make sure that you have the required fonts for the selected language.
 MESSAGE_LANG_CHANGE=Notez que LimeWire doit être redémarré pour prendre en compte le changement de langue. Aussi, assurez-vous de disposer des polices de caractères requises pour l'affichage de la langue sélectionnée.
 #### MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
 MESSAGE_SENSITIVE_SHARE_TOP=Vous tentez de partager un dossier susceptible de contenir des informations sensibles ou personnelles\u00a0:
