New Tags Capitalization

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -609,7 +609,7 @@ SEARCH_PUBLIC_BLOCK_STRING=Bloquear computadora central
 #### SEARCH_RESULT_TABLE_LABEL=Results
 SEARCH_RESULT_TABLE_LABEL=Resultados
 #### SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
-#? SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=
+SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Buscar más
 #### SEARCH_SEARCHING_LABEL=Searching...
 SEARCH_SEARCHING_LABEL=Buscando...
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
@@ -661,15 +661,15 @@ SEARCH_WHATS_NEW_SMALL=Nuevo
 #### SEARCH_SELECT_TYPE=Select Type:
 SEARCH_SELECT_TYPE=Seleccionar tipo:
 #### SEARCH_MEDIA_DOCUMENTS_TOOLTIP=Search for Document Files, Including html, txt, pdf, and More
-#? SEARCH_MEDIA_DOCUMENTS_TOOLTIP=
+SEARCH_MEDIA_DOCUMENTS_TOOLTIP=Buscar archivos de Documentos, incluyendo html, txt, pdf, y más
 #### SEARCH_MEDIA_PROGRAMS_TOOLTIP=Search for Program Files, Including exe, zip, gz, and More
-#? SEARCH_MEDIA_PROGRAMS_TOOLTIP=
+SEARCH_MEDIA_PROGRAMS_TOOLTIP=Buscar archivos de Programas, Incluyendo exe, zip, gz, y más
 #### SEARCH_MEDIA_AUDIO_TOOLTIP=Search For Audio Files, Including mp3, wav, ogg, and More
-#? SEARCH_MEDIA_AUDIO_TOOLTIP=
+SEARCH_MEDIA_AUDIO_TOOLTIP=Buscar archivos de Audio, Incluyendo y más
 #### SEARCH_MEDIA_VIDEO_TOOLTIP=Search For Video Files, Including avi, mpg, wmv, and More
-#? SEARCH_MEDIA_VIDEO_TOOLTIP=
+SEARCH_MEDIA_VIDEO_TOOLTIP=Buscar archivos de Video, Incluyendo avi, mpg, wmv y más
 #### SEARCH_MEDIA_IMAGES_TOOLTIP=Search For Image Files, Including jpg, gif, png and More
-#? SEARCH_MEDIA_IMAGES_TOOLTIP=
+SEARCH_MEDIA_IMAGES_TOOLTIP=Buscar archivos de Imágenes, Incluyendo jpg, gif, png y más
 #### SEARCH_FILTER_RESULTS=Filter Results:
 SEARCH_FILTER_RESULTS=Resultados del filtro:
 #### SEARCH_BACK_TO_SEARCH=Back To Search
@@ -681,23 +681,23 @@ SEARCH_BLOCK_HOST=¿Desea bloquear los resultados de búsquedas obtenidos de la co
 # Magnet stuff
 ################################################################################
 #### MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
-#? MAGNET_COPY_MAGNET_LINKS_LABEL=
+MAGNET_COPY_MAGNET_LINKS_LABEL=Copiar Enlaces Magnet al Portapapeles
 #### MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the selected Files to the Clipboard
-#? MAGNET_COPY_MAGNET_LINKS_TOOLTIP=
+MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copiar los Enlaces Magnet de los archivos seleccionados al Portapapeles
 
 ################################################################################
 # Search actions
 ################################################################################
 # {0} the space separated list of keywords
 #### SEARCH_FOR_KEYWORDS_ACTION_NAME=Search for Keywords: {0}
-#? SEARCH_FOR_KEYWORDS_ACTION_NAME=
+SEARCH_FOR_KEYWORDS_ACTION_NAME=Buscar por Palabras Clave: {0}
 # {0} the already translated mediatype
 #### SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
-#? SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=
+SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Buscar "Que hay de nuevo?" por: {0}
 # {0} the type of the search, e.g. Title, Album, Genre
 # {1} the keywords fo the search, e.g. name of the album
 #### SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
-#? SEARCH_XML_FIELD_ACTION_NAME=
+SEARCH_XML_FIELD_ACTION_NAME=Buscar por {0}: {1}
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -1223,9 +1223,9 @@ LIBRARY_TABLE_LICENSE=Licencia
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=Cargas
 #### LIBRARY_TABLE_SEARCH_POPUP_MENU=Search
-#? LIBRARY_TABLE_SEARCH_POPUP_MENU=
+LIBRARY_TABLE_SEARCH_POPUP_MENU=Buscar
 #### LIBRARY_TABLE_ADVANCED_POPUP_MENU=Advanced
-#? LIBRARY_TABLE_ADVANCED_POPUP_MENU=
+LIBRARY_TABLE_ADVANCED_POPUP_MENU=Avanzado
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_NEW_FOLDER_LABEL=Nueva carpeta
 #### LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing
@@ -1673,7 +1673,7 @@ UPDATE_DIALOG_CAPTION=Nueva Versión Disponible
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 UPDATE_MESSAGE_SMALL=Hay una nueva versión disponible. ¿Desea actualizar?
 #### UPDATE_TITLE=A new version of LimeWire is available.
-UPDATE_TITLE=Hay una nueva versión de Limewire disponible.
+UPDATE_TITLE=Hay una nueva versión de LimeWire disponible.
 #### UPDATE_LATER_LABEL=Update Later
 UPDATE_LATER_LABEL=Actualizar despues
 #### UPDATE_NOW_LABEL=Update Now
@@ -1832,7 +1832,7 @@ ERROR_KEEP_ALIVE=LimeWire no le permite mantener tantas conexiones porque crean 
 #### ERROR_TOO_LOW_FOR_ULTRAPEER=Ultrapeers with leaf nodes need at least six connections.
 ERROR_TOO_LOW_FOR_ULTRAPEER=Los Ultrapares con nodos hoja necesitan por lo menos seis conexiones.
 #### ERROR_TOO_HIGH_FOR_LEAF=Leaves only need one connection, since they are connected to an Ultrapeer.
-ERROR_TOO_HIGH_FOR_LEAF=Las hojas sólo necesitan una conexión, ya que están conectadas a un ultrapar.
+ERROR_TOO_HIGH_FOR_LEAF=Las hojas sólo necesitan una conexión, ya que están conectadas a un Ultrapar.
 #### ERROR_PORT=Could not find a port to use for incoming connections.\nPlease specify a port from the configuration window.
 ERROR_PORT=No se pudo encontrar un puerto para uso de las conexiones entrantes.\nPor favor especifique un puerto desde la ventana de configuración.
 #### ERROR_INCOMING_CONNECTIONS=Could not listen to socket for incoming connections; aborting.
@@ -2123,11 +2123,11 @@ OPTIONS_SPEED_BOX_LABEL=Velocidad:
 # Key/Value pairs for disabling supernode support
 ################################################################################
 #### OPTIONS_DISABLE_SUPERNODE_MODE_TITLE=Ultrapeer Capabilities
-OPTIONS_DISABLE_SUPERNODE_MODE_TITLE=Capacidades del ultrapar
+OPTIONS_DISABLE_SUPERNODE_MODE_TITLE=Capacidades del Ultrapar
 #### OPTIONS_DISABLE_SUPERNODE_MODE_LABEL=If your computer has a fast internet connection, LimeWire may act as an "Ultrapeer" for slower users. You can disable this if needed.
-OPTIONS_DISABLE_SUPERNODE_MODE_LABEL=Si su computadora tiene una conexión rápida a internet, LimeWire puede funcionar como un "ultrapar" para usuarios con conexión más lenta. Si es necesario, puede desactivar esta función.
+OPTIONS_DISABLE_SUPERNODE_MODE_LABEL=Si su computadora tiene una conexión rápida a internet, LimeWire puede funcionar como un "Ultrapar" para usuarios con conexión más lenta. Si es necesario, puede desactivar esta función.
 #### OPTIONS_DISABLE_SUPERNODE_MODE_BOX_LABEL=Disable Ultrapeer Capabilities:
-OPTIONS_DISABLE_SUPERNODE_MODE_BOX_LABEL=Desactivar las capacidades de ultrapar:
+OPTIONS_DISABLE_SUPERNODE_MODE_BOX_LABEL=Desactivar las capacidades de Ultrapar:
 
 ################################################################################
 # Key/Value pairs for disabling OOB support
@@ -3081,7 +3081,7 @@ QRP_LEAF=Hoja
 #### STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_TITLE=Sent
 STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_TITLE=Enviado
 #### STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
-STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_LABEL=Todas las consultas dirigidas a otros ultrapares para el último salto, mediante tablas de direccionamiento de consultas.
+STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_LABEL=Todas las consultas dirigidas a otros Ultrapares para el último salto, mediante tablas de direccionamiento de consultas.
 #### STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT=Sent
 STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT=Enviado
 #### STATS_QRP_ULTRAPEER_ROUTED_QUERIES_DROP=Not Sent
@@ -3365,7 +3365,7 @@ STATS_LIME_SENT_BYTES_MULTICAST_PUSH_REQUESTS_LABEL=Kilobytes de mecanismos de e
 #### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Sent
 STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_TITLE=Enviado
 #### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
-STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=Todas las consultas dirigidas a otros ultrapares durante el último salto, mediante las tablas de direccionamiento de consultas.
+STATS_SENT_ULTRAPEER_ROUTED_QUERIES_SEND_LABEL=Todas las consultas dirigidas a otros Ultrapares durante el último salto, mediante las tablas de direccionamiento de consultas.
 #### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=Not Sent
 STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_TITLE=No enviado
 #### STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
@@ -3393,7 +3393,7 @@ STATS_HANDSHAKING_LEAF_LABEL=Estadísticas de sincronización como hoja.
 #### STATS_HANDSHAKING_ULTRAPEER_TITLE=Ultrapeer
 STATS_HANDSHAKING_ULTRAPEER_TITLE=Ultrapar
 #### STATS_HANDSHAKING_ULTRAPEER_LABEL=Statistics for handshaking as an ultrapeer.
-STATS_HANDSHAKING_ULTRAPEER_LABEL=Estadísticas de sincronización como ultrapar.
+STATS_HANDSHAKING_ULTRAPEER_LABEL=Estadísticas de sincronización como Ultrapar.
 #### STATS_HANDSHAKING_OUTGOING_TITLE=Outgoing
 STATS_HANDSHAKING_OUTGOING_TITLE=Saliente
 #### STATS_HANDSHAKING_OUTGOING_LABEL=Statistics for outgoing Gnutella connection handshaking.
@@ -4014,7 +4014,7 @@ UP_INCOMING_ACCEPT_UP=Aceptación entrante (Ultrapar)
 #### UP_INCOMING_REJECT_NO_ROOM_LEAF=In Rej. (All Slots Taken)
 UP_INCOMING_REJECT_NO_ROOM_LEAF=Rechazo entrante (Todas las ranuras tomadas)
 #### UP_INCOMING_REJECT_NO_ROOM_UP=In Rej. (Network Needs Ultrapeer)
-UP_INCOMING_REJECT_NO_ROOM_UP=Rechazo entrante (La red necesita ultrapares)
+UP_INCOMING_REJECT_NO_ROOM_UP=Rechazo entrante (La red necesita Ultrapares)
 #### OUTGOING_BAD_CONNECT=Bad Connect
 OUTGOING_BAD_CONNECT=Mala conexión
 #### OUTGOING_SERVER_REJECT=Server Reject
@@ -4046,7 +4046,7 @@ OUTGOING_LIMEWIRE_ULTRAPEER_REJECT=Ultrapares de LimeWire
 #### OUTGOING_LIMEWIRE_LEAF_REJECT=LimeWire Leaves
 OUTGOING_LIMEWIRE_LEAF_REJECT=Hojas de LimeWire
 #### OUTGOING_OTHER_ULTRAPEER_REJECT=Other Ultrapeers
-OUTGOING_OTHER_ULTRAPEER_REJECT=Otros ultrapares
+OUTGOING_OTHER_ULTRAPEER_REJECT=Otros Ultrapares
 #### OUTGOING_OTHER_LEAF_REJECT=Other Leaves
 OUTGOING_OTHER_LEAF_REJECT=Otras hojas
 
