Changing 'TURBOCHARGED' to 'Turbo-Charged' per discussion with Sam

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -144,7 +144,7 @@ GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the lef
 # Key/value pairs for the Going Pro image.
 ###################################################################
 GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
-GOING_PRO_DESCRIPTION=Better search results\nTURBOCHARGED download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
+GOING_PRO_DESCRIPTION=Better search results\nTurbo-Charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
 
 ###################################################################
 # Key/value pairs for the Windows system tray
@@ -512,8 +512,8 @@ STATISTICS_CONNECTION_GOOD=Good
 STATISTICS_CONNECTION_GOOD_TIP=You are not yet fully connected to the network, but have a very good connection.
 STATISTICS_CONNECTION_EXCELLENT=Excellent
 STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong.
-STATISTICS_CONNECTION_TURBO_CHARGED=TURBOCHARGED
-STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience TURBOCHARGED connections all the time with LimeWire PRO.
+STATISTICS_CONNECTION_TURBO_CHARGED=Turbo-Charged
+STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience Turbo-Charged connections all the time with LimeWire PRO.
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong.
 STATISTICS_CONNECTION_QUALITY=Quality:
 STATISTICS_CONNECTION_IDLE=Idle
@@ -790,7 +790,7 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=Use the Default Directory
 # Key/Value pairs for the pro window on startup
 ################################################################################
 PRO_TITLE=Upgrade to PRO
-PRO_LABEL_THANKS=For TURBOCHARGED downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
+PRO_LABEL_THANKS=For Turbo-Charged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
 PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 GO_PRO_TIP=Get LimeWire PRO Now
 WHYGOPRO=Why
@@ -949,13 +949,13 @@ SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
-SUPPORT_LIMEWIRE_01=For TURBOCHARGED searches get LimeWire PRO.
+SUPPORT_LIMEWIRE_01=For Turbo-Charged searches get LimeWire PRO.
 SUPPORT_LIMEWIRE_02=Click here to support LimeWire's development of open, peer-to-peer networks.
 SUPPORT_LIMEWIRE_03=Purchase LimeWire PRO to help us make downloads faster.
-SUPPORT_LIMEWIRE_04=For TURBOCHARGED downloads get LimeWire PRO.
+SUPPORT_LIMEWIRE_04=For Turbo-Charged downloads get LimeWire PRO.
 SUPPORT_LIMEWIRE_05=Support open networks.
 SUPPORT_LIMEWIRE_06=Click here to support open source and open protocols.
-SUPPORT_LIMEWIRE_07=For TURBOCHARGED Performance get LimeWire PRO.
+SUPPORT_LIMEWIRE_07=For Turbo-Charged Performance get LimeWire PRO.
 SUPPORT_LIMEWIRE_08=Keep the Internet open.  Get LimeWire PRO.
 SUPPORT_LIMEWIRE_09=Developing LimeWire costs real money.  Get PRO.
 SUPPORT_LIMEWIRE_11=Help support sharing of independent media content.
