New consistency checks and error/warning dialogs before a download is started.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2372,6 +2372,7 @@ STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OO
 # Key/value pair for save location error states
 ################################################################################
 SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not set file location, a file with the name "{0}" already exists.
+SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_ERROR=Could not set file location, another download is already downloading to "{0}".
 SAVE_LOCATION_ALREADY_SAVED_ERROR=Could not set file location, the download is already finished.
 SAVE_LOCATION_HAS_NO_PARENT_ERROR=Could not set file location because parent folder does not exist.
 SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not set file location because you do not have write access to the folder "{0}".
