--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2371,14 +2371,23 @@ STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OO
 ################################################################################
 # Key/value pair for save location error states
 ################################################################################
-SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not set file location, a file with the name "{0}" already exists.
-SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_ERROR=Could not set file location, another download is already downloading to "{0}".
-SAVE_LOCATION_ALREADY_SAVED_ERROR=Could not set file location, the download is already finished.
-SAVE_LOCATION_HAS_NO_PARENT_ERROR=Could not set file location because parent folder does not exist.
-SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not set file location because you do not have write access to the folder "{0}".
-SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not set file location because the folder "{0}" does not exist. 
+SAVE_LOCATION_ALREADY_EXISTS_SHORT_ERROR=File already exists
+SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_SHORT_ERROR=Filename taken
+SAVE_LOCATION_ALREADY_SAVED_SHORT_ERROR=Download already finished
+SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_SHORT_ERROR=No write permission
+SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_SHORT_ERROR=Folder does not exist
+SAVE_LOCATION_NOT_A_DIRECOTRY_SHORT_ERROR=Not a folder
+SAVE_LOCATION_SECURITY_VIOLATION_SHORT_ERROR=Invalid filename
+SAVE_LOCATION_FILE_NOT_REGULAR_SHORT_ERROR=Not a file
+SAVE_LOCATION_FILESYSTEM_SHORT_ERROR=Filesystem error
+
+SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not save download to {0}, the file already exists.
+SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_ERROR=Could not save download to {0}, another download is already downloading to that file.
+SAVE_LOCATION_ALREADY_SAVED_ERROR=Could not set the file location, the download is already finished.
+SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not save download to the folder {0},  because you do not have write access to it.
+SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not save download to folder {0}, because it does not exist. 
 SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Could not set download folder {0} because it denotes an already existing file.
-SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the file name {0} is invalid and may corrupt your system.
+SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the filename {0} is invalid and may corrupt your system.
 SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location because {0} is not a regular file.
 SAVE_LOCATION_FILESYSTEM_ERROR=Could not set file location due to an error in the filesystem.
 ################################################################################
