--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -471,6 +471,31 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Username
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Password
 
 ################################################################################
+# Key/value pairs for DownloaderDialog
+################################################################################
+DOWNLOADER_DIALOG_SAVE_AS_ACTION_NAME=Save As...
+DOWNLOADER_DIALOG_SAVE_AS_ACTION_SHORT_DESCRIPTION=Choose a Different Location for the Download
+DOWNLOADER_DIALOG_CANCEL_ACTION_SHORT_DESCRIPTION=Cancel the Download
+DOWNLOADER_DIALOG_OVERWRITE_ACTION_SHORT_NAME=Overwrite
+DOWNLOADER_DIALOG_OVERWRITE_ACTION_SHORT_DESCRIPTION=Overwrite the Existing File
+# {0} a short error message which is localized independently
+DOWNLOADER_DIALOG_ERROR_LABEL=Error: {0}
+# {0} a short warning  message which is localized independently
+DOWNLOADER_DIALOG_WARNING_LABEL=Warning: {0} 
+# {0} the full path name of the file in question
+DOWNLOADER_DIALOG_NOTE_LABEL=<b>Note</b>: A file with the same content already exists in the library at {0}
+
+################################################################################
+# Key/value pairs for DownloaderUtils
+################################################################################
+DOWNLOADER_UTILS_FILECHOOSER_TITLE=Save Download As
+# {0} the full path name of the file in question
+DOWNLOADER_UTILS_HASH_CONFLICT_MESSAGE=You already have the exact same file at {0}
+DOWNLOADER_UTILS_HASH_CONFLICT_QUESTION=Do you want to continue downloading anyway?
+DOWNLOADER_UTILS_HASH_CONFLICT_CONTINUE_LABEL=Continue
+
+
+################################################################################
 # Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=available
