comments to messages

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2406,13 +2406,20 @@ SAVE_LOCATION_SECURITY_VIOLATION_SHORT_ERROR=Invalid filename
 SAVE_LOCATION_FILE_NOT_REGULAR_SHORT_ERROR=Not a file
 SAVE_LOCATION_FILESYSTEM_SHORT_ERROR=Filesystem error
 
+# {0} the full path name of the file
 SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not save download to {0}, the file already exists.
+# {0} the full path name of the file
 SAVE_LOCATION_IS_ALREADY_DOWNLOADED_TO_ERROR=Could not save download to {0}, another download is already downloading to that file.
 SAVE_LOCATION_ALREADY_SAVED_ERROR=Could not set the file location, the download is already finished.
+# {0} the full path name of the folder
 SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not save download to the folder {0},  because you do not have write access to it.
+# {0} the full path name of the folder
 SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not save download to folder {0}, because it does not exist. 
+# {0} the full path name of the folder/file
 SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Could not set download folder {0} because it denotes an already existing file.
+# {0} the full path name of the file
 SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the filename {0} is invalid and may corrupt your system.
+# {0} the full path name of the file
 SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location because {0} is not a regular file.
 SAVE_LOCATION_FILESYSTEM_ERROR=Could not set file location due to an error in the filesystem.
 ################################################################################
