Some corrections sent by Gisela Strauss (gisela.adaptation AT gmail DOT com). Thanks.

--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -866,15 +866,15 @@ STATISTICS_SHARING_TOOLTIP=Gesamtzahl freigegebener Dateien
 #### STATISTICS_CONNECTION_DISCONNECTED=Disconnected
 STATISTICS_CONNECTION_DISCONNECTED=getrennt
 #### STATISTICS_CONNECTION_DISCONNECTED_TIP=You are disconnected from the network. To connect, choose Connect from the File menu.
-STATISTICS_CONNECTION_DISCONNECTED_TIP=Sie sind nicht mit dem Netzwerk verbunden. Um zu verbinden, wählen Sie Verbinden aus dem Datei Menü.
+STATISTICS_CONNECTION_DISCONNECTED_TIP=Sie sind nicht mit dem Netzwerk verbunden. Um sich zu verbinden, wählen Sie Verbinden vom Menü Datei.
 #### STATISTICS_CONNECTION_CONNECTING=Connecting
 STATISTICS_CONNECTION_CONNECTING=verbindend
 #### STATISTICS_CONNECTION_CONNECTING_TIP=You are currently connecting to the network.
-STATISTICS_CONNECTION_CONNECTING_TIP=Sie verbinden gerade mit dem Netzwerk.
+STATISTICS_CONNECTION_CONNECTING_TIP=Sie verbinden sich gerade mit dem Netzwerk.
 #### STATISTICS_CONNECTION_POOR=Poor
 STATISTICS_CONNECTION_POOR=leicht
 #### STATISTICS_CONNECTION_POOR_TIP=You are connected to few hosts and have an unstable connection the network.
-STATISTICS_CONNECTION_POOR_TIP=Sie sind mit wenigen Rechnern verbunden und haben eine unstabile Verbindung mit dem Netzwerk.
+STATISTICS_CONNECTION_POOR_TIP=Sie sind mit wenigen Rechnern verbunden und haben eine instabile Verbindung mit dem Netzwerk.
 #### STATISTICS_CONNECTION_FAIR=Fair
 STATISTICS_CONNECTION_FAIR=mittelmäßig
 #### STATISTICS_CONNECTION_FAIR_TIP=Your connection to the network is getting stronger.
@@ -882,7 +882,7 @@ STATISTICS_CONNECTION_FAIR_TIP=Ihre Verbindung mit dem Netzwerk wird besser.
 #### STATISTICS_CONNECTION_GOOD=Good
 STATISTICS_CONNECTION_GOOD=gut
 #### STATISTICS_CONNECTION_GOOD_TIP=You are not yet fully connected to the network, but have a very good connection.
-STATISTICS_CONNECTION_GOOD_TIP=Sie sind nicht noch nicht komplett mit dem Netzwerk verbunden, aber haben eine sehr gute Verbindung.
+STATISTICS_CONNECTION_GOOD_TIP=Sie sind nicht noch komplett mit dem Netzwerk verbunden, aber haben eine sehr gute Verbindung.
 #### STATISTICS_CONNECTION_EXCELLENT=Excellent
 STATISTICS_CONNECTION_EXCELLENT=ausgezeichnet
 #### STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong.
@@ -1304,7 +1304,7 @@ SETUP_WELCOME_TITLE=Willkommen
 #### SETUP_WELCOME_LABEL=Welcome to the LimeWire setup wizard. LimeWire will guide you through a series of steps to configure LimeWire for optimum performance.
 SETUP_WELCOME_LABEL=Willkommen zum LimeWire-Installations-Assistenten. LimeWire führt Sie schrittweise zur optimalen Leistung.
 #### SETUP_WELCOME_PARTIAL_LABEL=Welcome to the LimeWire setup wizard. LimeWire has recently added new features that require your configuration. LimeWire will guide you through a series of steps to configure these new features.
-SETUP_WELCOME_PARTIAL_LABEL=Willkommen zum LimeWire-Installations-Assistenten. LimeWire hat kürzlich neue Eigenschaften hinzugeügt, die von Ihnen konfiguriert werden sollten. LimeWire führt Sie schrittweise zur optimalen Leistung.
+SETUP_WELCOME_PARTIAL_LABEL=Willkommen zum LimeWire-Installations-Assistenten. LimeWire hat kürzlich neue Eigenschaften hinzugefügt, die von Ihnen konfiguriert werden sollten. LimeWire führt Sie schrittweise zur optimalen Leistung.
 #### SETUP_SAVE_TITLE=Save Directory
 SETUP_SAVE_TITLE=Downloadverzeichnis
 #### SETUP_SAVE_LABEL=Please choose a folder where you would like your files to be downloaded. This folder will also be shared with other gnutella users by default.
@@ -1330,7 +1330,7 @@ SETUP_FIREWALL_LABEL_TWO=LimeWire bittet nun um Erlaubnis das Netzwerk benutzen 
 #### SETUP_SCAN_TITLE=Scan for Files
 SETUP_SCAN_TITLE=Dateisuche
 #### SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which directories you would like to share when the scan is complete.
-SETUP_SCAN_LABEL=Möchten Sie, daß LimeWire Ihre Festplatte auf andere Media-Dateien durchsucht? Sie haben danach immer noch die Möglichkeit zu bestimmen, welche Verzeichnisse freigegeben werden sollen.
+SETUP_SCAN_LABEL=Möchten Sie, dass LimeWire Ihre Festplatte auf andere Media-Dateien durchsucht? Sie haben danach immer noch die Möglichkeit zu bestimmen, welche Verzeichnisse freigegeben werden sollen.
 #### SETUP_WAIT_TITLE=Scanning Hard Drive
 SETUP_WAIT_TITLE=Festplatte durchsuchen
 #### SETUP_WAIT_LABEL=Please wait as LimeWire scans your hard drive...
@@ -1382,7 +1382,7 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=Verwendet das Standardverzeichnis.
 #### PRO_TITLE=Upgrade to PRO
 PRO_TITLE=Upgrade auf LimeWire PRO
 #### PRO_LABEL_THANKS=For Turbo-Charged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
-PRO_LABEL_THANKS=Vielen Dank, daß Sie den Netzwerk-Gedanken durch die Benutzung von LimeWire unterstützt. Bitte denken Sie über ein Upgrade auf LimeWire PRO nach, um unsere Entwicklungsarbeit und das gesamte Netzwerk zu unterstützen.
+PRO_LABEL_THANKS=Vielen Dank, dass Sie den Netzwerk-Gedanken durch die Benutzung von LimeWire unterstützt. Bitte denken Sie über ein Upgrade auf LimeWire PRO nach, um unsere Entwicklungsarbeit und das gesamte Netzwerk zu unterstützen.
 #### PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 PRO_LABEL_QUESTION=Upgrade auf LimeWire PRO?
 #### GO_PRO_TIP=Get LimeWire PRO Now
@@ -1402,7 +1402,7 @@ GO_PRO_LATER_TIP=Zeigt dieses Fenster später nochmal an.
 #### JAVA_UPGRADE_TITLE=Upgrade Your Java
 JAVA_UPGRADE_TITLE=Upgrade Ihren Java
 #### JAVA_UPGRADE_MESSAGE=LimeWire has detected that you are using an out-of-date version of Java. LimeWire looks and acts much better with newer versions of Java. Features include support for scroll-wheels on mice, a Windows XP look, and many other improvements.
-JAVA_UPGRADE_MESSAGE=LimeWire hat festgestellt, daß ihre Java-Version veraltet ist. Mit neueren Java-Versionen sieht LimeWire besser aus und arbeitet viel besser. Dies beinhaltet Unterstützung für Scroll-Räder von Mäusen, ein Windows-XP Design und viele andere Verbesserungen.
+JAVA_UPGRADE_MESSAGE=LimeWire hat festgestellt, dass ihre Java-Version veraltet ist. Mit neueren Java-Versionen sieht LimeWire besser aus und arbeitet viel besser. Dies beinhaltet Unterstützung für Scroll-Räder von Mäusen, ein Windows-XP Design und viele andere Verbesserungen.
 #### JAVA_UPGRADE_QUESTION=Would you like to get your free Java upgrade?
 JAVA_UPGRADE_QUESTION=Möchten Sie Ihr freies Java Upgrade?
 
@@ -1699,7 +1699,7 @@ MESSAGE_ERROR_CAPTION=Fehler
 #### MESSAGE_SHARE_SAVE_DIR=Would you like to add the save directory to your list of shared directories? Subdirectories of this directory will also be shared.
 MESSAGE_SHARE_SAVE_DIR=Wollen Sie das Speichern-Verzeichnis zur Liste der freigegebenen Verzeichnisse hinzufügen? Unterverzeichnisse werden dabei auch freigegeben.
 #### MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Are you sure you want to stop sharing this directory?
-MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Sind Sie sich sicher, daß dieses Verzeichnis nicht mehr freigegeben sein soll?
+MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Sind Sie sich sicher, dass dieses Verzeichnis nicht mehr freigegeben sein soll?
 #### MESSAGE_CANNOT_UNSHARE_SUBDIRS=LimeWire cannot stop sharing subdirectories of directories that are shared.
 MESSAGE_CANNOT_UNSHARE_SUBDIRS=Unterverzeichnisse von freigegebenen Verzeichnissen können nicht gesperrt werden.
 #### MESSAGE_OVERWRITE_EXISTING_FILE=Overwrite existing file
@@ -1707,7 +1707,7 @@ MESSAGE_OVERWRITE_EXISTING_FILE=Vorhandene Datei überschreiben
 #### MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire will not launch the specified file for security reasons.
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire wird die ausgewählte Datei aus Sicherheitsgründen nicht starten.
 #### MESSAGE_CONFIRM_FILE_DELETE=Are you sure you want to delete the selected file(s)?
-MESSAGE_CONFIRM_FILE_DELETE=Sind Sie sich sicher, daß Sie die ausgewählte(n) Datei(en) löschen möchten?
+MESSAGE_CONFIRM_FILE_DELETE=Sind Sie sich sicher, dass Sie die ausgewählte(n) Datei(en) löschen möchten?
 #### MESSAGE_UNABLE_TO_DELETE_FILE_START=Unable to delete the file
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Die Datei
 #### MESSAGE_UNABLE_TO_DELETE_FILE_END=. It may be in use by another application.
@@ -1733,7 +1733,7 @@ MESSAGE_FILE_CORRUPT=LimeWire hält die Datei
 #### MESSAGE_CONTINUE_DOWNLOAD=Do you want to continue the download?
 MESSAGE_CONTINUE_DOWNLOAD=für beschädigt. Möchten Sie den Download fortsetzen?
 #### MESSAGE_LANG_CHANGE=Please note that you must restart LimeWire for the language to change. Also, make sure that you have the required fonts for the selected language.
-MESSAGE_LANG_CHANGE=Bitte beachten Sie, daß Sie LimeWire neu starten müssen um eine neue Sprache anzuzeigen. Außerdem stellen Sie bitte sicher, das alle benötigten Schriften installiert sind.
+MESSAGE_LANG_CHANGE=Bitte beachten Sie, dass Sie LimeWire neu starten müssen um eine neue Sprache anzuzeigen. Außerdem stellen Sie bitte sicher, das alle benötigten Schriften installiert sind.
 #### MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
 MESSAGE_SENSITIVE_SHARE_TOP=Sie versuchen ein Verzeichnis freizugeben, das wahrscheinlich vertrauliche Informationen enthält.
 #### MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
@@ -2279,11 +2279,11 @@ OPTIONS_UPDATE_TITLE=Update-Einstellungen
 #### OPTIONS_UPDATE_LABEL=You can choose when you want to be notified of new LimeWire releases.
 OPTIONS_UPDATE_LABEL=Sie können wählen, wann Sie über neue LimeWire Versionen informiert werden möchten.
 #### OPTIONS_UPDATE_BETA=Beta Releases
-OPTIONS_UPDATE_BETA=Alle beta Verzionen und Updaten
+OPTIONS_UPDATE_BETA=Alle Beta Versionen
 #### OPTIONS_UPDATE_SERVICE=Service Releases
-OPTIONS_UPDATE_SERVICE=Service Updaten und majoren Verzionen
+OPTIONS_UPDATE_SERVICE=Service-Versionen
 #### OPTIONS_UPDATE_MAJOR=Major Releases
-OPTIONS_UPDATE_MAJOR=Nur majoren Verzionen
+OPTIONS_UPDATE_MAJOR=Haupt-Versionen
 
 ################################################################################
 # Key/Value pairs for the chat options in the options window
