--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1223,6 +1223,9 @@ OPTIONS_SHARED_DIRS_LABEL=You can choose the folders for sharing files. Files in
 OPTIONS_SHARED_DIRS_BOX_LABEL=Folders:
 OPTIONS_SHARED_DIRS_BUTTON_LABEL=Add Folder...
 OPTIONS_SHARED_DIRS_BUTTON_TIP=Add a Folder to Share
+OPTIONS_SHARED_SPECIALLY_SHARE_BOX_LABEL=Share All Downloaded Files
+OPTIONS_SHARED_SHARE_SPECIALLY_TITLE=Individually Shared Files
+OPTIONS_SHARED_SHARE_SPECIALLY_LABEL=Also share files that are not downloaded to shared folders.
 
 ################################################################################
 # Key/value pairs for the shared extension options window item
