Removed use of AlreadyDownloadingException.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2408,6 +2408,7 @@ SAVE_LOCATION_NOT_A_DIRECOTRY_SHORT_ERROR=Not a folder
 SAVE_LOCATION_SECURITY_VIOLATION_SHORT_ERROR=Invalid filename
 SAVE_LOCATION_FILE_NOT_REGULAR_SHORT_ERROR=Not a file
 SAVE_LOCATION_FILESYSTEM_SHORT_ERROR=Filesystem error
+SAVE_LOCATION_ALREADY_DOWNLOADING_SHORT_ERROR=Same file already being downloaded
 
 # {0} the full path name of the file
 SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not save download to {0}, the file already exists.
@@ -2425,6 +2426,7 @@ SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the filename
 # {0} the full path name of the file
 SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location because {0} is not a regular file.
 SAVE_LOCATION_FILESYSTEM_ERROR=Could not set file location due to an error in the filesystem.
+SAVE_LOCATION_ALREADY_DOWNLOADING_ERROR=The same file is already being downloaded.
 ################################################################################
 # Key/value pair for download location dialog
 ################################################################################
